; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/phy/extr_phy_device.c_get_phy_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/phy/extr_phy_device.c_get_phy_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i32 }
%struct.mii_bus = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.phy_device* @get_phy_device(%struct.mii_bus* %0, i32 %1) #0 {
  %3 = alloca %struct.phy_device*, align 8
  %4 = alloca %struct.mii_bus*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.phy_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mii_bus* %0, %struct.mii_bus** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.phy_device* null, %struct.phy_device** %6, align 8
  %9 = load %struct.mii_bus*, %struct.mii_bus** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @get_phy_id(%struct.mii_bus* %9, i32 %10, i32* %7)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i32, i32* %8, align 4
  %16 = call %struct.phy_device* @ERR_PTR(i32 %15)
  store %struct.phy_device* %16, %struct.phy_device** %3, align 8
  br label %28

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  %19 = and i32 %18, 536870911
  %20 = icmp eq i32 %19, 536870911
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  store %struct.phy_device* null, %struct.phy_device** %3, align 8
  br label %28

22:                                               ; preds = %17
  %23 = load %struct.mii_bus*, %struct.mii_bus** %4, align 8
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call %struct.phy_device* @phy_device_create(%struct.mii_bus* %23, i32 %24, i32 %25)
  store %struct.phy_device* %26, %struct.phy_device** %6, align 8
  %27 = load %struct.phy_device*, %struct.phy_device** %6, align 8
  store %struct.phy_device* %27, %struct.phy_device** %3, align 8
  br label %28

28:                                               ; preds = %22, %21, %14
  %29 = load %struct.phy_device*, %struct.phy_device** %3, align 8
  ret %struct.phy_device* %29
}

declare dso_local i32 @get_phy_id(%struct.mii_bus*, i32, i32*) #1

declare dso_local %struct.phy_device* @ERR_PTR(i32) #1

declare dso_local %struct.phy_device* @phy_device_create(%struct.mii_bus*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
